fixed scrollbar width

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -28,6 +28,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: "avenixel", sans-serif;
+  scrollbar-width: none;
 }
 
 .pixel-corners, .pixel-corners-blue ,
